--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "config": "^4.1.1"
+    "canvas": "^3.2.0",
+    "config": "^4.1.1",
+    "mineflayer": "^4.33.0",
+    "prismarine-viewer": "^1.33.0"
   }
 }
